# demo-detection

./: .gitignore  CMakeLists.txt  README.md  README_TASK.md  pyproject.toml
src/cpp/: main.cpp
src/py/: solution_pipeline.ipynb  track.py  train_data.yaml
src/python/: preprocessing.py  solution_pipeline.ipynb  track.py  training_data.yaml
