[project]
name = "test-task-dl-26-12-2025"
version = "0.1.0"
description = "YOLO26m model, trained to detect cars and trucks on a BEV BW panorama in realtime mode."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyter>=1.1.1",
    "lap>=0.5.12",
    "matplotlib>=3.10.8",
    "onnxruntime>=1.23.2",
    "onnxruntime-gpu>=1.23.2",
    "onnxslim>=0.1.82",
    "polars>=1.37.1",
    "pyarrow>=23.0.0",
    "seaborn>=0.13.2",
    "tqdm>=4.67.1",
    "ultralytics>=8.4.7",
]

[dependency-groups]
dev = [
    "basedpyright>=1.37.1",
    "ruff>=0.14.13",
]

[tool.basedpyright]
typeCheckingMode = "standard"
reportAttributeAccessIssue = false
reportArgumentType = false
reportCallIssue = false
reportOptionalMemberAccess = false
reportPrivateImportUsage = false
